# haskell-capnp

./: .gitattributes  .gitignore  .gitlab-ci.yml  .hlint.yaml  .stylish-haskell.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS  Encoding.hs  Main.hs  Makefile  PrimTypes.hs  README.md  Schema.hs  SchemaEncoding.hs  TestMain.hs  TmpUtil.hs  cabal.project  capnp.cabal  default.nix  format.sh  gen-builtintypes-lists.hs  hlint.sh  regen.sh  release.nix  shell.nix
.github/: FUNDING.yml
Control/Monad/CapNProto/: MessageBuilder.hs
Data/CapNProto/: Address.hs  BasicTypes.hs  Bits.hs  Blob.hs  Errors.hs  List.hs  LowLevel.hs  Message.hs  Pointer.hs  Schema.hs  Stream.hs  TH.hs  Untyped.hs  Untyped_.hs
Data/CapNProto/Message/: Vector.hs
Language/CapNProto/: TH.hs
Schema/CapNProto/: Schema.hs  Schema.hs-boot
Schema/CapNProto/Reader/: Schema.hs
Schema/CapNProto/Schema/: CodeGeneratorRequest.hs  CodeGeneratorRequest.hs-boot  Node.hs  Node.hs-boot
Tests/: EncodeDecodeUntyped.hs  Util.hs  WalkSchemaCodeGenRequest.hs
Tests/Data/CapNProto/: Bits.hs  Pointer.hs  Untyped.hs
bench/: Main.hs
capnp/: capnp.cabal
capnp-examples/: LICENSE  README.md  echo.capnp
capnp-haskell/: Encoding.hs  README.md  cabal.sandbox.config
capnp-tests/: capnp-tests.cabal
capnp-tests/tests/: Constants.hs  Instances.hs  PointerOOB.hs  SchemaGeneration.hs  SchemaQuickCheck.hs  WalkSchemaCodeGenRequest.hs
capnp-tests/tests/Module/Capnp/: Basics.hs  Bits.hs  Pointer.hs  Untyped.hs
capnp-tests/tests/Rpc/: Unwrap.hs
capnp-tests/tests/data/: generics.capnp
capnp/cmd/capnpc-haskell/: Check.hs  README.md
capnp/lib/Capnp/: Basics.hs  Classes.hs  Fields.hs  GenHelpers.hs  IO.hs  Message.hs  Mutability.hs  Repr.hs  TraversalLimit.hs  Untyped.hs
capnp/lib/Data/: Mutable.hs
capnp/lib/Internal/: AppendVec.hs  BuildPure.hs  Rc.hs  SnocList.hs
capnpc-haskell/: ChangeLog.md  LICENSE  Main.hs  capnpc-haskell.cabal
ci/: Dockerfile  README.md  install-linters.sh
cmd/capnpc-haskell/: Check.hs  Fmt.hs  FrontEnd.hs  IR.hs  Main.hs  README.md  Util.hs
cmd/capnpc-haskell/Backends/: Common.hs  Pure.hs  Raw.hs
cmd/capnpc-haskell/IR/: Common.hs  Flat.hs  Haskell.hs  Name.hs  New.hs  Pure.hs  Raw.hs  Stage1.hs
cmd/capnpc-haskell/Trans/: AbstractOpToHaskell.hs  CgrToStage1.hs  FlatToAbstractOp.hs  FlatToNew.hs  FlatToPure.hs  FlatToRaw.hs  HaskellToText.hs  NewToHaskell.hs  PureToHaskell.hs  RawToHaskell.hs  Stage1ToFlat.hs  ToHaskellCommon.hs
cmd/cg2/: Main.hs
cmd/cg2/IR/: Common.hs  Flat.hs  Haskell.hs  Name.hs  Pure.hs  Raw.hs  Stage1.hs
cmd/cg2/Trans/: CgrToStage1.hs  FlatToHaskell.hs  FlatToPure.hs  FlatToRaw.hs  HaskellToText.hs  PureToHaskell.hs  RawToHaskell.hs  Stage1ToFlat.hs  ToHaskellCommon.hs
core-schema/: README.md  haskell.capnp
examples/: CalculatorClient.hs  CalculatorServer.hs  ChangeLog.md  EchoClient.hs  EchoServer.hs  Main.hs  README.md  addressbook.capnp  cabal.project  calculator.capnp  capnp-examples.cabal
examples/Capnp/: Echo.hs
examples/Capnp/ById/: Xd0a87f36fa0182f5.hs
examples/Capnp/ById/Xd0a87f36fa0182f5/: Pure.hs
examples/Capnp/Echo/: Pure.hs
examples/cmd/: Main.hs
examples/go-server/: .gitignore  gen.sh  go.mod  go.sum  main.go
examples/lib/Examples/: CalculatorClient.hs  CalculatorServer.hs  EchoClient.hs  EchoServer.hs
examples/lib/Examples/Rpc/: CalculatorClient.hs  CalculatorServer.hs  EchoClient.hs  EchoServer.hs
examples/lib/Examples/Serialization/HighLevel/: Read.hs  Write.hs
examples/lib/Examples/Serialization/LowLevel/: Read.hs  Write.hs
exe/capnpc-haskell/: Fmt.hs  FmtPure.hs  FmtRaw.hs  FrontEnd.hs  HsAst.hs  HsSchema.hs  IR.hs  Main.hs  Util.hs
exe/capnpc-haskell/Backends/: Common.hs  Pure.hs  Raw.hs
executables/capnpc-haskell/: Generator.hs  Main.hs  Namespace.hs
lib/: Capnp.hs
lib/Capnp/: Accessors.hs  Address.hs  Basics.hs  Bits.hs  ById.hs  Canonicalize.hs  Capnp.hs  Classes.hs  Constraints.hs  Convert.hs  Errors.hs  Fields.hs  Gen.hs  GenHelpers.hs  IO.hs  Message.hs  Mutability.hs  New.hs  Pointer.hs  Pointer2.hs  Promise.hs  Repr.hs  Rpc.hs  Rpc.hs-boot  RpcOld.hs  RpcReorg.hs  TraversalLimit.hs  Tutorial.hs  Untyped.hs
lib/Capnp/Basics/: Pure.hs
lib/Capnp/ById/: X8ef99297a43a5e34.hs  Xa184c7885cdaf2a1.hs  Xa93fc509624c72d9.hs  Xb312981b2552a250.hs  Xb8630836983feed7.hs  Xbdf87d7bb8304e81.hs
lib/Capnp/Capnp/: Cxx.hs  Json.hs  Persistent.hs  Rpc.hs  RpcTwoparty.hs  Schema.hs
lib/Capnp/GenHelpers/: New.hs  Pure.hs  ReExports.hs  Rpc.hs
lib/Capnp/New/: Accessors.hs  Basics.hs  Classes.hs  Constraints.hs
lib/Capnp/Repr/: Methods.hs  Parsed.hs
lib/Capnp/Rpc/: Breaker.hs  Common.hs  Errors.hs  Invoke.hs  Membrane.hs  Object.hs  Promise.hs  Revoke.hs  Server.hs  Transport.hs  Untyped.hs  Untyped.hs-boot  Util.hs
lib/Capnp/Untyped/: Pure.hs
lib/Codec/: CapNProto.hs  Capnp.hs
lib/Codec/Capnp/: Generic.hs
lib/Data/: Capnp.hs  Mutable.hs
lib/Data/CapNProto/: BasicTypes.hs  Errors.hs  List.hs  Schema.hs  TraversalLimit.hs
lib/Data/Capnp/: Address.hs  BasicTypes.hs  IO.hs  (+18 more)
lib/Internal/: AppendVec.hs  BuildPure.hs  CommitThrow.hs  Finalizer.hs  FinalizerKey.hs  Rc.hs  STE.hs  SnocList.hs  Supervisors.hs  TCloseQ.hs  ThrowFail.hs  Util.hs
nix/: capnp.nix  declarative.nix  nixpkgs.json  nixpkgs.nix  quota.nix  spec.json
scripts/: README.md  format.sh  gen-basic-instances.hs  gen-builtintypes-lists.hs  hlint.sh  regen.sh
testdata/: aircraft.capnp
testdata/constants/: misc.capnp
testdata/schema/: misc.capnp
tests/: CalculatorExample.hs  Instances.hs  Main.hs  PointerOOB.hs  Regression.hs  SchemaGeneration.hs  SchemaQuickCheck.hs  Util.hs  WalkSchemaCodeGenRequest.hs
tests/Capnp/: Gen
tests/Rpc/: Unwrap.hs
tests/Tests/: SchemaQuickCheck.hs  Util.hs  WalkSchemaCodeGenRequest.hs
tests/afl-fuzz/: Decode.hs  main.c
tests/data/: README.md  aircraft.capnp  generics.capnp  schema-codegenreq
tests/main/: Instances.hs  Main.hs  Regression.hs  SchemaQuickCheck.hs  Util.hs  WalkSchemaCodeGenRequest.hs
tests/simple-tests/: Main.hs
tests/tests/: Main.hs
utils/: rpctrace.hs
(+161 files in other folders)
