cabal-version: 2.2
name:                capnp-examples
version:             0.1.0.0
synopsis:            Examples for haskell-capnp
-- description:
homepage:            https://github.com/zenhack/haskell-capnp
license:             MIT
license-file:        LICENSE
author:              Ian Denhardt
maintainer:          ian@zenhack.net
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md

common shared-opts
  build-depends:
      base >=4.11 && <5.0
    , capnp
    , bytestring ^>=0.10
    , data-default ^>=0.7
    , exceptions ^>=0.10
    , vector ^>=0.12
    , network ^>= 2.8.0
    , network-simple ^>= 0.4
  default-language:    Haskell2010
  other-modules:
      Capnp.Gen.Echo
    , Capnp.Gen.Echo.Pure
    , Capnp.Gen.ById.Xd0a87f36fa0182f5
    , Capnp.Gen.ById.Xd0a87f36fa0182f5.Pure

executable echo-client
  import: shared-opts
  main-is:             EchoClient.hs

executable echo-server
  import: shared-opts
  main-is:             EchoServer.hs
