cabal-version: 2.2
name:                capnp-examples
version:             0.1.0.0
synopsis:            Examples for haskell-capnp
-- description:
homepage:            https://github.com/zenhack/haskell-capnp
license:             MIT
license-file:        LICENSE
author:              Ian Denhardt
maintainer:          ian@zenhack.net
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md

library
  build-depends:
      base >=4.11 && <5.0
    , capnp
    , stm ^>= 2.5.0
    , bytestring ^>=0.10
    , data-default ^>=0.7
    , exceptions ^>=0.10
    , vector ^>=0.12
    , network ^>= 2.8.0
    , network-simple ^>= 0.4
    , supervisors ^>= 0.2
  hs-source-dirs:
    lib
  exposed-modules:
      Examples.EchoClient
    , Examples.EchoServer
    , Examples.CalculatorClient
    , Examples.CalculatorServer

    -- Generated code
    , Capnp.Gen.ById.X85150b117366d14b
    , Capnp.Gen.ById.X85150b117366d14b.Pure
    , Capnp.Gen.ById.Xd0a87f36fa0182f5
    , Capnp.Gen.ById.Xd0a87f36fa0182f5.Pure
    , Capnp.Gen.Calculator
    , Capnp.Gen.Calculator.Pure
    , Capnp.Gen.Echo.Pure
    , Capnp.Gen.Echo
  ghc-options:
    -Wall
    -Wno-name-shadowing
  default-language:    Haskell2010

executable run-capnp-example
  build-depends:
      base
    , capnp-examples
  hs-source-dirs:
    cmd
  main-is:
    Main.hs
  ghc-options:
    -Wall
  default-language:    Haskell2010
