cabal-version: 2.2
name:                capnp-examples
version:             0.1.0.0
synopsis:            Examples for haskell-capnp
-- description:
homepage:            https://github.com/zenhack/haskell-capnp
license:             MIT
license-file:        LICENSE
author:              Ian Denhardt
maintainer:          ian@zenhack.net
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md

library
  build-depends:
      base >=4.11 && <5.0
    , capnp
    , stm ^>= 2.5.0
    , bytestring >=0.10 && <0.12
    , data-default ^>=0.7
    , exceptions ^>=0.10
    , vector >=0.12 && <0.14
    , mtl >=2.2.2 && <2.4
    , network ^>= 3.1
    , network-simple ^>= 0.4
    , supervisors ^>= 0.2
    , text >= 1.2.3 && <2.1
  hs-source-dirs:
    lib
    gen/lib
  exposed-modules:
      Examples.Rpc.EchoClient
    , Examples.Rpc.EchoServer
    , Examples.Rpc.CalculatorClient
    , Examples.Rpc.CalculatorServer
    , Examples.Serialization.HighLevel.Read
    , Examples.Serialization.HighLevel.Write
    , Examples.Serialization.LowLevel.Read
    , Examples.Serialization.LowLevel.Write

    -- Generated code
    , Capnp.Gen.Addressbook
    , Capnp.Gen.ById.X85150b117366d14b
    , Capnp.Gen.ById.Xcd6db6afb4a0cf5c
    , Capnp.Gen.ById.Xd0a87f36fa0182f5
    , Capnp.Gen.Calculator
    , Capnp.Gen.Echo
  ghc-options:
    -Wall
    -Wno-name-shadowing
  default-language:    Haskell2010

executable run-capnp-example
  build-depends:
      base
    , capnp-examples
  hs-source-dirs:
    cmd
  main-is:
    Main.hs
  ghc-options:
    -Wall
  default-language:    Haskell2010
